<resources>
    <string name="app_name">TeamManager</string>
    <string name="struct_name">Nom de la structure</string>
    <string name="welcome">Bienvenue sur LolTeamManager !</string>
    <string name="default_struct_name">DefaultStruct</string>
    <string name="validate_image">Validate Image</string>
    <string name="validate">Valider</string>
    <string name="home">Accueil</string>
    <string name="teams">Équipes</string>
    <string name="txt_empty_team">Vous n\'avez pas encore créé de Team !</string>
    <string name="empty_team_imageview">Empty team imageView</string>
    <string name="fab_add_team">Fab add Team</string>
    <string name="image_of_toplaner">Image of Toplaner</string>
    <string name="image_of_jgler">Image of Jgler</string>
    <string name="image_of_mid">Image of mid</string>
    <string name="image_of_adc">Image of adc</string>
    <string name="image_of_sup">Image of sup</string>
    <string name="nom_equipe">Nom de l\'équipe</string>
    <string name="team_nom">Nom</string>
    <string name="toplaner">Toplaner</string>
    <string name="jungler">Jungler</string>
    <string name="midlaner">Midlaner</string>
    <string name="adc">ADC</string>
    <string name="support">Support</string>
    <string name="add_team">Ajout d\'une équipe</string>
    <string name="info">Infos</string>
    <string name="ranked_solo_5x5">Ranked Solo 5x5</string>
    <string name="_18_6_12">18/6/12</string>
    <string name="img_kda">img kda</string>
    <string name="_16k">16k</string>
    <string name="_150">150</string>
    <string name="img_item_1">img item 1</string>
    <string name="img_item_2">img item 2</string>
    <string name="img_item_3">img item 3</string>
    <string name="img_item_4">img item 4</string>
    <string name="img_item_5">img item 5</string>
    <string name="img_item_6">img item 6</string>
    <string name="img_item_7">img item 7</string>
    <string name="_25_45">25:45</string>
    <string name="_12_06_15">12/06/15</string>
    <string name="action_save">Action save</string>
    <string name="action_delete">Action delete</string>
    <string name="team_error_title">Erreur</string>
    <string name="team_error_message">Veuillez entrer un nom pour l\'équipe !</string>
    <string name="chargement_des_utilisateurs">Chargement des utilisateurs ...</string>
    <string name="loading">Chargement...</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">A simple channel</string>
</resources>