<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    card_view:cardElevation="2dp"
    card_view:contentPadding="5dp"
    card_view:cornerRadius="2dp"
    android:layout_height="90dp">

    <RelativeLayout
        android:id="@+id/rl_main_content"
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_height="fill_parent">

        <View
            android:id="@+id/win_or_lose"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:background="#FF0000" />

        <ImageView
            android:id="@+id/iv_portrait"
            android:src="@drawable/sivir"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_toRightOf="@+id/win_or_lose"
            android:layout_toEndOf="@+id/win_or_lose" />

        <TextView
            android:id="@+id/tv_type_match"
            android:text="@string/ranked_solo_5x5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/iv_portrait"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/iv_portrait" />

        <RelativeLayout
            android:id="@+id/rl_infos"
            android:layout_width="110dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_portrait"
            android:layout_alignBottom="@+id/iv_portrait"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/iv_portrait">

            <ImageView
                android:id="@+id/iv_kda"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/kda"
                android:contentDescription="@string/img_kda" />

            <TextView
                android:id="@+id/tv_kda"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/_18_6_12"
                android:layout_toRightOf="@+id/iv_kda"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/iv_kda" />

            <ImageView
                android:id="@+id/iv_gold"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/scoreboardicon_gold"
                android:layout_below="@+id/iv_kda"/>

            <TextView
                android:id="@+id/tv_gold"
                android:text="@string/_16k"
                android:textSize="12sp"
                android:layout_toRightOf="@+id/iv_gold"
                android:layout_alignBottom="@+id/iv_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_gold" />

            <ImageView
                android:id="@+id/iv_cs"
                android:src="@drawable/scoreboardicon_minion"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_alignBottom="@+id/tv_gold"
                android:layout_toRightOf="@+id/tv_gold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tv_gold" />

            <TextView
                android:id="@+id/tv_cs"
                android:text="@string/_150"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_cs"
                android:layout_toRightOf="@+id/iv_cs"
                android:layout_toEndOf="@+id/iv_cs" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_portrait"
            android:layout_toRightOf="@+id/rl_infos"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/rl_infos">

            <ImageView
                android:id="@+id/iv_item1"
                android:src="@drawable/item"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img_item_1" />
            <ImageView
                android:id="@+id/iv_item2"
                android:src="@drawable/item"
                android:layout_toRightOf="@+id/iv_item1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toEndOf="@+id/iv_item1"
                android:contentDescription="@string/img_item_2" />
            <ImageView
                android:id="@+id/iv_item3"
                android:src="@drawable/item"
                android:layout_toRightOf="@+id/iv_item2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img_item_3"
                android:layout_toEndOf="@+id/iv_item2" />
            <ImageView
                android:id="@+id/iv_item4"
                android:src="@drawable/item"
                android:layout_below="@+id/iv_item1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/img_item_4" />
            <ImageView
                android:id="@+id/iv_item5"
                android:src="@drawable/item"
                android:layout_below="@+id/iv_item1"
                android:layout_toRightOf="@id/iv_item4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toEndOf="@id/iv_item4"
                android:contentDescription="@string/img_item_5" />
            <ImageView
                android:id="@+id/iv_item6"
                android:src="@drawable/item"
                android:layout_below="@+id/iv_item1"
                android:layout_toRightOf="@id/iv_item5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toEndOf="@id/iv_item5"
                android:contentDescription="@string/img_item_6" />

            <ImageView
                android:id="@+id/iv_item7"
                android:src="@drawable/item"
                android:layout_marginLeft="2dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_item6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="2dp"
                android:layout_toEndOf="@+id/iv_item6"
                android:contentDescription="@string/img_item_7" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_infos_date"
            android:layout_toRightOf="@id/rl_items"
            android:layout_alignBottom="@+id/iv_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/rl_items">

            <TextView
                android:text="@string/_25_45"
                android:id="@+id/tv_duration"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tv_date"
                android:textSize="12sp"
                android:text="@string/_12_06_15"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>