<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_diana"
    android:orientation="vertical">

<!--    <androidx.appcompat.widget.AppCompatTextView-->
<!--        android:id="@+id/welcome"-->
<!--        android:hint="@string/welcome"-->
<!--        android:background="@drawable/wtxt_background"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toTopOf="@id/structure"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:textSize="24sp"/>-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/structure"
        android:background="@drawable/txt_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/struct_name"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@id/btn_validate_struct"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints="@string/default_struct_name"
        android:gravity="center_horizontal"
        android:inputType="textCapCharacters"
        android:textSize="24sp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_validate_struct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/structure"
        app:layout_constraintTop_toBottomOf="@id/structure"
        app:layout_constraintRight_toRightOf="@id/structure"
        android:background="@drawable/selector_change_background_btn"
        android:text="@string/validate"
        android:textSize="32sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>